# WebsiteGenerator

./: .gitignore  LICENCE.md  README.md  index.html  package-lock.json  package.json
.github/workflows/: build-release.yml
.parcel-cache/: 5d102dff0a3f4e7e  8ec8b337af6fb088  994d8e47a1be7201  9ff098162c63992b.txt  f970587c6b251095  lock.mdb
app/: CHANGELOG.md  CMakeLists.txt  generatorSource.c
app/lib/: CategoryLib.c  CategoryLib.h  DefinitionLib.h  ExtraLib.c  ExtraLib.h  MessageLib.c  MessageLib.h  PageLib.c  PageLib.h  TemplateLib.c  TemplateLib.h
app/logs/: Freshmore.txt  Freshmore_Reminder.txt  Freshmore_description.txt  Junior_description.txt  Senior_description.txt  Sophomore_description.txt  index.txt  index_First post.txt  index_Second post.txt  index_description.txt  logCategories.txt
app/templates/: credits.txt  nav_end.txt  nav_start.txt  source.html  start.txt
docs/: CONSOLE_DESIGN.txt  PROJECT_ENGINE_ARCHITECURE.txt  PSP.md
pages/: index.html
src/assets/js/: main.js
src/assets/scss/: main.scss
src/assets/scss/abstracts/: _variables.scss
src/css/: style.css
src/pages/: freshmore.html  index.html  junior.html  senior.html  sophomore.html
styles/: style.css
